--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: ''
-email: contact@routedlogic.net
+email: root@routedlogic.net
 url: https://routedlogic.net
 description: ''
 
